# BK_DeepLearning_with_Python_3ed

./: main.py  pyproject.toml
ch02/: chapter02_mathematical-building-blocks.ipynb
ch03/: Introduction_JAX.ipynb  Introduction_Keras.ipynb  Introduction_PyTorch.ipynb  Introduction_TensorFlow.ipynb
ch04/: binary_classification.ipynb  multiclass_classification.ipynb  regression.ipynb
