[project]
name = "bk-deeplearning-with-python-3ed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "keras>=3.14.1",
    "keras-hub>=0.29.1",
    "keras-nlp>=0.29.1",
    "matplotlib>=3.10.9",
    "tensorflow>=2.20.0",
]
